# pick-distinct-colors-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: api.rs  color.rs  distance.rs  error.rs  lib.rs  metrics.rs  pool.rs  prng.rs  wasm.rs
src/algorithms/: ant_colony.rs  exact_maximum.rs  exact_minimum.rs  genetic.rs  greedy.rs  kmeans_pp.rs  max_sum_global.rs  max_sum_sequential.rs  mod.rs  particle_swarm.rs  random.rs  simulated_annealing.rs  tabu_search.rs
tests/: cross_validation.rs  edge_cases.rs  integration.rs  property.rs  quality.rs  regression.rs
